--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,11 @@ body{
     margin-bottom: var(--large);
 }
 
+.title:hover{
+    color:var(--Yellow);
+    cursor: pointer;
+}
+
 .paragraph{
     font-weight: 500;
     line-height:1.5rem;
